Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4724

Test failure on test suite sanity-hsm, subtest test_71

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.6.0, Lustre 2.5.1
    • Lustre 2.6.0, Lustre 2.5.1, Lustre 2.12.3
    • 3
    • 12983

      This issue was created by maloo for John Hammond <john.hammond@intel.com>

      This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/e688c5ae-a550-11e3-9e53-52540035b04c.

      The sub-test test_71 failed with the following error:

      Copytool sent malformed event: {"event_time": "2014-03-06 03:11:53 -0800", "event_type": "LOGGED_MESSAGE", "level": "INFO", "message": "lhsmtool_posix[8611]: waiting for message from kernel"

      Unknown macro: {"event_time"}

      Info required for matching: sanity-hsm 71

            mjmac Michael MacDonald (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: